Fixing truncating button text issue
Created a new css element to pad the buttons that are truncating differently from the other buttons without changing their aspect when in a larger size view and some other adjustments

bisq-network#1246

--- a/desktop/src/main/resources/css/controls.css
+++ b/desktop/src/main/resources/css/controls.css
@@ -37,6 +37,10 @@
     -fx-text-fill: derive(-fx-light-text-color, -20%);
 }
 
+.button-reduced-padding {
+    -fx-label-padding: 0 -15 0 -15;
+}
+
 .button:default,
 .default-button {
     -fx-background-color: -fx-default-button;
